--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 								<dl class="uk-description-list-line uk-text-left">
 									<dt>Mr Nigel Gibbens (Chief Veterinary Officer, DEFRA)</dt>
 									<dd>Opening speaker</dd>
-									<dt>Professor Lorenzo Savioli (formery WHO, now Liverpool School of Tropical Medicine)</dt>
+									<dt>Professor Lorenzo Savioli (formerly WHO, now Liverpool School of Tropical Medicine)</dt>
 									<dd>Neglected Tropical Diseases and global health [kindly sponsored by Bayer]</dd>
 									<dt>Professor James Fawcett (Chairman, Cambridge Centre for Brain Repair)</dt>
 									<dd>Developing new treatments for spinal cord injury</dd>
@@ -480,8 +480,8 @@
 									<dd>Comparative aspects of Cancer Therapy</dd>
 									<dt>Ms Katie Beckmann (Institute of Zoology (IoZ), Zoological Society of London (ZSL), Wildfowl and Wetlands Trust (WWT))</dt>
 									<dd>Songbird Zoonoses</dd>
-									<dd>Professor Derek Smith (Director of the WHO Collaborating Centre for Modelling, Evolution and Control of Emerging Infectious Diseases, Head of the Centre for Pathogen Evolution, Cambridge University)</dd>
-									<dt>Influenza Evolution</dt>
+									<dt>Professor Derek Smith (Director of the WHO Collaborating Centre for Modelling, Evolution and Control of Emerging Infectious Diseases, Head of the Centre for Pathogen Evolution, Cambridge University)</dt>
+									<dd>Influenza Evolution</dd>
 								</dl>
 							</div>
 
