Menu icons update

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 							-->
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-info">Description</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-info-circle">Description</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-users">Committee</span></a></li>
 								<li><a href="#Events" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-calendar">Events</span></a></li>
-								<li><a href="#News" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-info">News</span></a></li>
+								<li><a href="#News" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-file-text">News</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
