Ayano pic changed, text re events/past events

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 								<div class="4u">
 									<article class="item">
 										<a href="mailto:am2062@cam.ac.uk" class="image fit">
-											<img src="images/ayanobio1.jpg" alt="">
+											<img src="images/Ayanobio1.jpg" alt="">
 										</a>
 										<header>Ayano Miyashita</header>
 										<a href="mailto:am2062@cam.ac.uk" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a>
@@ -351,12 +351,20 @@
 
 							<header>
 								<h2>Events</h2>
-							<h3>Look out for our next conference to be held in January 2016 at the University of Cambridge, UK. - Email info@onehealthcambridge.com for more information.</h3>
+							<h3>
+							Look out for our next conference to be held in <em> January 2016 at the University of Cambridge, UK</em>. Email info@onehealthcambridge.com for more information.
 
-							<h3>Last Conference - January 17th 2015 - Event Closed</h3>
+
+							</h3>
+
+							<header>
+								<h2>Past Events</h2>
+							</header>
+
+							<h3>The 2nd Cambridge University One Health Conference - January 17th 2015 - Event Closed</h3>
 
 							<p>
-								Following last year's sell-out success, you are warmly invited to the next Cambridge University One Health Conference, organised by medical and veterinary students at Cambridge and kindly sponsored by the VPHA and Merial.
+								Following last year's sell-out success, you are warmly invited to the next Cambridge University One Health Conference, organised by medical and veterinary students at Cambridge and kindly sponsored by the Wellcome Trust, VPHA, Bayer and Merial.
 							</p>
 
 							<p>
@@ -391,12 +399,12 @@
 								<table class="uk-table">
 								<tbody>
 									<tr class="uk-text-left">
-										<td class="uk-text-left uk-width-3-10 uk-text-bold">Non-dining Tickets - Ticket Sales Now Closed</td>
+										<td class="uk-text-left uk-width-3-10 uk-text-bold">Non-dining Tickets 2015 - Ticket Sales Now Closed</td>
 										<td >£24</td>
 										<td>Conference, including buffet lunch and refreshments.</td>
 									</tr>
 									<tr class="uk-text-left">
-										<td class="uk-text-left uk-text-bold">Dining Tickets - Ticket Sales Now Closed</td>
+										<td class="uk-text-left uk-text-bold">Dining Tickets 2015 - Ticket Sales Now Closed</td>
 										<td>£34</td>
 										<td>Conference, buffet lunch, refreshments, plus traditional Cambridge University formal dinner in Cambridge's oldest college. A fun and atmospheric way to mingle with other delegates after a busy day of talks</td>
 									</tr>
@@ -466,9 +474,7 @@
 					<section id="contact" class="four">
 						<div class="container">
 
-							<header>
-								<h2>Past Events</h2>
-							</header>
+							
 
 							<button class="uk-button uk-width-1-1 uk-button-primary uk-button-large" data-uk-toggle="{target:'#past-event-1', animation:'uk-animation-fade'}"><i class="uk-icon-group"></i>  Click for 2014 Speaker List</button>
 
